objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>VirtualProduct1__c</fullName>
        <label>Virtual Product1</label>
        <picklist>
            <picklistValues>
                <fullName>VX 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 8000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unity Cloud Intelligence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VirtualProduct2__c</fullName>
        <label>Virtual Product2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VirtualProduct3__c</fullName>
        <label>Virtual Product3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VirtualQuantity1__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Virtual Quantity1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VirtualQuantity2__c</fullName>
        <label>Virtual Quantity2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VirtualQuantity3__c</fullName>
        <label>Virtual Quantity3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Eval_License_Duration__c</fullName>
        <inlineHelpText>Duration for the eval license key to be generated for</inlineHelpText>
        <label>Virtual Eval License Duration</label>
        <picklist>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eval_length__c</fullName>
        <description>Number of days that product was in eval</description>
        <formula>IF( Return_Date__c  &gt; ( TODAY() -1500), Return_Date__c  -  Estimated_Ship_Date__c,   TODAY()  - Estimated_Ship_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eval_length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POC Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>eval_length__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>CustSrvc</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Partial_Shipped_POC_Requests</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved to Ship</value>
        </filters>
        <filters>
            <field>Partial_Ship__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approved / Partial Shipped POC Requests</label>
        <sharedTo>
            <group>Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EvalShipQueue</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Evaluation_Product_1__c</columns>
        <columns>Evaluation_Product_2__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Scheduled</value>
        </filters>
        <label>POC Ship Queue</label>
    </listViews>
    <listViews>
        <fullName>MyOpenEvalRequests</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>AccountName__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Approved,Approved to Ship,Scheduled</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Evaluation</value>
        </filters>
        <label>My Open POC Requests</label>
    </listViews>
    <listViews>
        <fullName>OpenDiscountRequests</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Opportunity__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Discount</value>
        </filters>
        <label>Open Discount Requests</label>
    </listViews>
    <listViews>
        <fullName>OpenEvalRequests</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>AccountName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Approved,Approved to Ship,Scheduled</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Evaluation</value>
        </filters>
        <label>Open POC Requests</label>
    </listViews>
    <listViews>
        <fullName>OpenRequests</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Approved,Approved to Ship,Scheduled</value>
        </filters>
        <label>Open Requests</label>
    </listViews>
    <listViews>
        <fullName>ScheduledEvalShipments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Scheduled POC Shipments</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POC Requests</pluralLabel>
    <recordTypes>
        <fullName>Existing</fullName>
        <active>true</active>
        <label>Existing</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cant_submit_until_approved</fullName>
        <active>false</active>
        <description>Ensure that a request can&apos;t be moved out of Draft unless both approval flags are set</description>
        <errorConditionFormula>and( ISCHANGED(Status__c) , OR(not(RSM_Approved__c) , not(TR_Approved__c)),   ISPICKVAL( PRIORVALUE( Status__c), &quot;Draft&quot; ))</errorConditionFormula>
        <errorMessage>Both the RSM and Technically Responsible must review and approve this request before it can be submited for approvals</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dont_Allow_ExpInt_Shipping_AprvdToShip</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Approved to Ship&quot;),
OR(
ISCHANGED(  Expedited_Shipping__c ),
ISCHANGED( International_Shipping__c ),
ISCHANGED(  Number_of_Appliances__c ),
ISChanged( Number_of_Virtual_Products__c )
)
)</errorConditionFormula>
        <errorMessage>You cannot add appliances/virtual products or change the expedited shipping or international shipping after the POC is approved to Ship.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECSP_Poc_cant_be_created_for_non_servPr</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
OR(
AND
(
ISPICKVAL(Opportunity__r.Account.Partner_Type__c,&quot;Service Provider&quot;),
Opportunity__r.Account.ECSP__c ,
ISPICKVAL(POC_Type__c,&quot;WAN Op&quot; )
),
AND
(
ISPICKVAL(Opportunity__r.Account.Partner_Type__c,&quot;Service Provider&quot;),
!Opportunity__r.Account.ECSP__c ,
ISPICKVAL(POC_Type__c,&quot;Service Provider&quot; )
),
AND(
NOT(ISPICKVAL(Opportunity__r.Account.Partner_Type__c,&quot;Service Provider&quot;)),
ISPICKVAL( POC_Type__c,&quot;Service Provider&quot; )
)
))</errorConditionFormula>
        <errorDisplayField>POC_Type__c</errorDisplayField>
        <errorMessage>The selected POC Type is not valid for this account. Service Provider is valid for ECSP Enabled Service Provider accounts . Edge Connect and Wan OP is valid for non-Service Provider accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Open_as_Draft</fullName>
        <active>true</active>
        <description>doesn&apos;t allow status to be changed from default of draft</description>
        <errorConditionFormula>AND(  ISNEW() , not(ISPICKVAL( PRIORVALUE( Status__c), &quot;Open&quot; )),  Marketplace_Sourced_Opp__c =0,  IsAllVirtual__c =0)</errorConditionFormula>
        <errorMessage>Request can only be opened in stage &quot;Open&quot;. After RSM and TR approvals are made it can be submitted for approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POCApprovercanbechangedbyOps</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
NOT(ISCHANGED(Trigger_POC_Approvers__c)),
NOT(ISNEW()),
OR(
AND(NOT(ISBLANK(PRIORVALUE(RSM__c))),ISCHANGED( RSM__c )),
AND(NOT(ISBLANK(PRIORVALUE(RSM_Manager__c))),ISCHANGED( RSM_Manager__c )),
AND(NOT(ISBLANK(PRIORVALUE(RSM_VP_Sales__c))),ISCHANGED( RSM_VP_Sales__c )),
AND(NOT(ISBLANK(PRIORVALUE(SE__c))),ISCHANGED( SE__c )),
AND(NOT(ISBLANK(PRIORVALUE(SE_Director__c))),ISCHANGED( SE_Director__c )),
AND(NOT(ISBLANK(PRIORVALUE(SE_Manager__c))),ISCHANGED( SE_Manager__c ))
),
NOT($User.Id ==&apos;00550000001jvSe&apos;),
NOT($User.Id ==&apos;005500000045fp1&apos;),
NOT($User.Id ==&apos;00550000002rxts&apos;),
NOT($Profile.Name ==&quot;System Administrator&quot;),
NOT($Profile.Name ==&quot;9-Operations Manager&quot;)
)</errorConditionFormula>
        <errorMessage>You are not allowed to change POC Approvers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POC_cant_be_created_for_dead_opps</fullName>
        <active>true</active>
        <description>A POC cannot be created if the Opportunity Stage is Closed Dead.</description>
        <errorConditionFormula>AND( 
IsNew(),
NOT(ISBLANK(Opportunity__c)),
OR(
ISPICKVAL(Opportunity__r.StageName ,&quot;Closed Dead&quot;),
ISPICKVAL(Opportunity__r.StageName ,&quot;Closed Won&quot;),
ISPICKVAL(Opportunity__r.StageName ,&quot;Closed Lost&quot;),
ISPICKVAL(Opportunity__r.StageName ,&quot;Closed Deleted&quot;)),
NOT($User.ProfileId  =&apos;00e30000000elKy&apos;))</errorConditionFormula>
        <errorMessage>POC cannot be be created as the selected opportunity stage is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POC_cant_be_created_without_prim_quotes</fullName>
        <active>false</active>
        <description>A POC cannot be created if there is no primary quote.</description>
        <errorConditionFormula>AND( 
IsNew(),
NOT(ISBLANK(Opportunity__c)),
NOT(ISPICKVAL(Opportunity__r.Type ,&quot;Marketplace&quot;)), 
ISPICKVAL(Opportunity__r.Product_Type__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>POC cannot be created for the selected opportunity as there is no primary quote defined.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POc_Contact_part_of_Opp_Account</fullName>
        <active>true</active>
        <errorConditionFormula>POC_Contact__r.AccountId != Opportunity__r.AccountId</errorConditionFormula>
        <errorDisplayField>POC_Contact__c</errorDisplayField>
        <errorMessage>POC Contact is not a valid contact for this account. Please select valid contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RSM_of_Oppty_Approves</fullName>
        <active>false</active>
        <description>Ensure that only the oppty owner can approve</description>
        <errorConditionFormula>and(
NOT(Opportunity__r.Account.ECSP__c ),
$User.Id &lt;&gt; Opportunity__r.OwnerId , 
ISCHANGED( RSM_Approved__c ), 
RSM_Approved__c =True)</errorConditionFormula>
        <errorMessage>Only the oportunity owner can approve this request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_End_Date_after_Target_End_Date</fullName>
        <active>true</active>
        <description>The Request End Date must always be after the Target End Date.</description>
        <errorConditionFormula>IF (AND($Profile.Name &lt;&gt; &apos;9-Operations Manager&apos;), 
AND( 
OR ( 
ISNEW(), 
ISCHANGED( Requested_End_Date__c )), 
Requested_End_Date__c &lt; Target_End_Date__c || Requested_End_Date__c = Target_End_Date__c 
) 
, 
false)</errorConditionFormula>
        <errorMessage>Your Requested End Date must be after the Target End Date of the POC.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_End_Date_notreq_OnInsert</fullName>
        <active>true</active>
        <description>The Request End Date is not required when the POC is created for the first time</description>
        <errorConditionFormula>IF (AND($Profile.Name &lt;&gt; &apos;9-Operations Manager&apos;), 
AND( ISNEW(),!ISNULL(Requested_End_Date__c )) 
, 
false)</errorConditionFormula>
        <errorMessage>Your Requested End Date can be entered for POC extensions only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_End_Date_cannot_exceed_30_days</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 
ISPICKVAL( POC_Type__c ,&quot;WAN Op&quot;), 
ISPICKVAL( POC_Type__c ,&quot;EdgeConnect&quot;) 
)&amp;&amp; 
NOT(ISBLANK( Requested_End_Date__c )) &amp;&amp; 
NOT(ISBLANK( Target_End_Date__c )) &amp;&amp; 
ISCHANGED(Requested_End_Date__c) &amp;&amp; 
Requested_End_Date__c - Target_End_Date__c &gt; 30</errorConditionFormula>
        <errorMessage>Requested End Date cannot be more than 30 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_End_Date_cannot_exceed_90_days</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( POC_Type__c ,&quot;Service Provider&quot;)&amp;&amp; 
NOT(ISBLANK( Requested_End_Date__c )) &amp;&amp; 
NOT(ISBLANK( Target_End_Date__c )) &amp;&amp; 
ISCHANGED(Requested_End_Date__c) &amp;&amp; 
Requested_End_Date__c - Target_End_Date__c &gt; 90</errorConditionFormula>
        <errorMessage>Requested End Date cannot be more than 90 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SP_POC_cant_be_on_Enterprise_Acc</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT(Opportunity__r.Account.ECSP__c),
OR(
ISPICKVAL( POC_Type__c,&quot;Perpetual-Orchestrator SP&quot; ),
ISPICKVAL( POC_Type__c,&quot;EC-SP-Metered +Orch-SP&quot; ),
ISPICKVAL( POC_Type__c,&quot;Perpetual&quot; ),
ISPICKVAL( POC_Type__c,&quot;EC-SP-Metered&quot; ),
ISPICKVAL( POC_Type__c,&quot;EC-SP-Term&quot; ),
ISPICKVAL( POC_Type__c,&quot;EC-SP-Term +Orch-SP&quot; )
)
)</errorConditionFormula>
        <errorDisplayField>POC_Type__c</errorDisplayField>
        <errorMessage>You can only select this poc type for Service Provider accounts.  Please check the ECSP box on the account  or  contact the Service Provider team to enable the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_POC_type_cannot_be_Enterprise</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Opportunity__r.Account.ECSP__c,
TEXT(POC_Type__c)!=Service_Provider_Account_Type__c
)</errorConditionFormula>
        <errorDisplayField>POC_Type__c</errorDisplayField>
        <errorMessage>POC Type should match the service provider Account Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR_Approval_Check</fullName>
        <active>false</active>
        <description>Validate that only the TR can check the approval box</description>
        <errorConditionFormula>and(
NOT(Opportunity__r.Account.ECSP__c ),
$User.Id &lt;&gt;  Opportunity__r.Technical_Responsible__r.Id , 

ISCHANGED( TR_Approved__c ), 
TR_Approved__c =true)</errorConditionFormula>
        <errorMessage>Only the person selected as Technical Responsibility can approve this request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unity_Cloud_Orch_cant_be_requested</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Is_Unity_Cloud_Orchestrator__c,
OR(
 ISBLANK(  Opportunity__r.Account.Unity_Orch_Admin_User__c ),
 ISPICKVAL(  Opportunity__r.Account.Unity_Orch_Location__c,&quot;&quot;  ),
 ISBLANK(   Opportunity__r.Account.Unity_Orch_Domain__c ))

)</errorConditionFormula>
        <errorMessage>You can only request unity cloud orchestrator provided all the fields(unity orchestrator domain, unity orchestrator admin user and unity orchestrator location ) are populated in the account. Please contact operations for any assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unity_Cloud_Orch_cant_be_requested_by_SP</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 
 Is_Unity_Cloud_Orchestrator__c ,
OR(
Opportunity__r.Account.ECSP__c,
ISPICKVAL( POC_Type__c ,&quot;WAN Op&quot;)
)

)</errorConditionFormula>
        <errorDisplayField>Is_Unity_Cloud_Orchestrator__c</errorDisplayField>
        <errorMessage>You cannot request unity cloud orchestrator on a Service Provider account or WAN OP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unity_Orch_cant_be_changed_after_approve</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED(Is_Unity_Cloud_Orchestrator__c),
 NOT(ISPICKVAL(Status__c,&quot;Open&quot;))

)</errorConditionFormula>
        <errorDisplayField>Is_Unity_Cloud_Orchestrator__c</errorDisplayField>
        <errorMessage>You cannot change the flag after the POC is approved or shipped.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>enforce_approval_process_to_advance</fullName>
        <active>true</active>
        <description>Enforce new approval submission instead of changing status</description>
        <errorConditionFormula>and( ISCHANGED(Status__c) ,  
OR(ISPICKVAL(Status__c, &quot;Open&quot; ),
ISPICKVAL(Status__c, &quot;Approved&quot; ),
ISPICKVAL(Status__c, &quot;Approved to Ship&quot; ),
ISPICKVAL(Status__c, &quot;Shipped&quot; ),
ISPICKVAL(Status__c, &quot;Shipped - Extended&quot; ),
ISPICKVAL(Status__c, &quot;Pending Return - Invoiced&quot; ),
ISPICKVAL(Status__c, &quot;Closed - Won&quot; ),
ISPICKVAL(Status__c, &quot;Closed - Denied&quot; ),
ISPICKVAL(Status__c, &quot;Closed - Returned&quot; ),
ISPICKVAL(Status__c, &quot;Scheduled&quot; )),
NOT( $Profile.Name==&quot;9-Operations Manager&quot; ),
NOT( $Profile.Name==&quot;System Administrator&quot; ),
Marketplace_Sourced_Opp__c =0
)</errorConditionFormula>
        <errorMessage>Use the Submit for Approval button instead of changing the status to request approval</errorMessage>
    </validationRules>
</CustomObject>